--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-map-gl": "^5.2.0",
     "debounce-promise": "^3.1.2",
     "easy-peasy": "^3.3.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-map-gl": "^5.2.3",
     "react-scripts": "3.4.0",
     "typescript": "~3.7.2"
   },
